cleanup: getting things ready for packaging

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /website-generator-helper/target/maven-status/
 /website-generator-helper/target/classes/com/cru/websitegeneratorhelper/*
 /website-generator-helper/target/website-generator-helper*.jar
+/website-generator-helper/target/image
+/website-generator-helper/output/
