deployment: windows msi package working

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/website-generator-helper/target/maven-archiver/
-/website-generator-helper/target/maven-status/
-/website-generator-helper/target/classes/com/cru/websitegeneratorhelper/*
-/website-generator-helper/target/website-generator-helper*.jar
-/website-generator-helper/target/image
+/.vscode/
+/website-generator-helper/target/
 /website-generator-helper/output/
